--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="/server.js"></script>
   </head>
   <body>
+    <h1>Hello Roman</h1>
     <p id="server-time"></p>
   </body>
 </html>
