--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="/server.js"></script>
   </head>
   <body>
-    <h1>Hello Maks version 2</h1>
+    <h1>Hello version 2</h1>
     <p id="server-time"></p>
   </body>
 </html>
